1.3.6:
 - change pong timing at random to avoid burst.
 - fix: fall into an infinite loop when the read error of file has occurred.

1.3.5:
 - fix: log output unnecessary message.
 - fix: segfault when other server shutdown.
 - add --core option.
 - core option is the same as "ulimit -c unlimited" command.

1.3.4:
 - fix: makuosan had deleted files even if use the r option.

1.3.3:
 - fix: hangup when large amount of traffic.
 - add i option (multicast interface address)

1.3.2:
 - fix: infinite loop during shutdown when use c option.

1.3.1:
 - add -T option (traffic-shape, Mbps order)

1.3.0:
 - add -R option (RCVBUF socket option value)
 - add -S option (SNDBUF socket option value)

1.2.2: 2010/2/25
 - makuosan.sysv 'status' and 'stop' option implement.
 - fix: recv timeout error when send file open.

1.2.1: 2009/6/16
 - refactoring for msync.
 - log format change. 

1.2.0: 2009/5/25
 - Improved response.
 - Added "[error]" to error logging messages.
 - Added detailed status message in the event of member timeout.
 - The msync's status option message now includes the command line of current process.
 - Fixed abnormal behavior when multiple msyncs are invoked simultaneously.
 - Fixed abnormal termination after file close failure.
 - Fixed message output when the delete option is used.
 - Fixed some minor flaws. 

1.1.3: 2009/1/14
 - sort msync --members by hostname
 - fix: msync failed for FreeBSD and MacOSX

1.1.2: 2008/12/24
 - fix: not send shutdown message 

1.1.1: 2008/12/24
 - error message output in detail

1.1.0: 2008/12/24
 - file transfer performance tuning
 - remote file delete function for makuosan
 - add --delete option for msync
 - add --sync   option for msync

1.0.1: 2008/11/12
 - add spec file   (support/makuosan.spec)
 - add init script (support/makuosan.sysv)
 - support for FreeBSD & MacOSX

1.0.0: 2008/11/6
 - stable release
 - change default value -f option. 1 to 3
 - fixed group missmatch
 - fixed statcomp bug
 - fixed dir perm bug