@@ -1,6 +1,7 @@
 1.3.6:
  - マルチキャストパケットのバーストを防ぐためにpongの発行タイミングをランダムにする
  - ファイルのリードエラーが発生したときに無限ループに陥る不具合を解消
+ - dsync中にメモリリークが発生していた不具合を修正
 
 1.3.5:
  - ログにゴミが出力されることがあった不具合を修正
